# Server

./: .gitignore  Dockerfile  README.md  ServerTR.txt  inital_data.py  main.py  pyproject.toml  requirements.txt  settings.py
api/: login.py
app/app/: .gitignore  ServerTR.txt  inital_data.py  main.py  settings.py
app/app/api/: __init__.py  api.py  chats.py  login.py  user.py  users.py  utils.py
app/app/backend/: __init__.py  chat.py  exceptions.py  user.py  utils.py
app/app/db/: schema.sql
app/app/src/: security.py  websockets.py
app/app/src/models/: user.py
app/app/src/schemas/: __init__.py  chat.py  token.py  user.py
app/app/tests/: conftest.py  test_backend.py
backend/: __init__.py  exceptions.py  user.py  utils.py
db/: schema.sql
docs/: backend.md
src/: login.py  schemas.py  security.py
src/schemas/: __init__.py  user.py
tests/: conftest.py  test_backend.py
