[tool.poetry]
name = "projectplatform"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
asyncpg = "^0.21.0"
passlib = "^1.7.4"
pydantic = "^1.7.2"
fastapi = "^0.61.2"
python-jose = "^3.2.0"

[tool.poetry.dev-dependencies]
pytest = "^6.1.1"
pytest-asyncio = "^0.14.0"
mimesis = "^4.1.2"
coverage = "^5.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
